--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -30,6 +30,7 @@ $grey-transparent: rgba(202, 202, 202, 0.3);
 
 // Breakpoints
 
+$screen-xxs-max: 405px;
 $screen-xs-max: 575px;
 $screen-sm-min: 576px;
 $screen-sm-max: 767px;
